# Hackaton_2025

./: .env.example  db.sqlite3  main.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
places/: admin.py  apps.py  forms.py  models.py  scheduler.py  urls.py  utils.py  views.py
places/management/commands/: populate_establishments.py
places/migrations/: 0001_initial.py  0002_productestablishment_created_at_and_more.py  0003_productestablishment_likes.py  0004_establishment_search_vector_and_more.py
places/templates/account/: login.html  logout.html
places/templates/places/: add_sighting.html  base.html  product_locations.html  search_page.html
